Fix: Comments menu on dark mode
References:
-
https://github.com/Podcastindex-org/web-ui/pull/253#issuecomment-1534156339

--- a/ui/src/components/CommentMenu/styles.scss
+++ b/ui/src/components/CommentMenu/styles.scss
@@ -13,7 +13,7 @@
     right: 0;
     display: flex;
     flex-direction: column;
-    background: #FFF;
+    background: var(--button-background);
     margin: 0;
     padding: .75rem;
     z-index: 1;
